--- a/css/interface.css
+++ b/css/interface.css
@@ -1,8 +1,9 @@
 /*header*/
-header{
+header {
     display: grid;
     grid-template-rows: 3rem 3.5rem;
 }
+
 /*.logo{
     background-image: url(../img/logoSMS.png);
     
@@ -15,7 +16,7 @@ header{
     display: grid;
     grid-template-rows: 3rem 3.5rem;
 }*/
-.header__top{
+.header__top {
     width: 100%;
     background-color: var(--color-background-head);
     display: flex;
@@ -23,23 +24,27 @@ header{
     padding: 0rem 1rem;
     align-items: center;
 }
-.header__top h1{
+
+.header__top h1 {
     color: var(--color-white);
     font-weight: bold;
     font-size: 1.2rem;
 }
-.header__top img{
+
+.header__top img {
     width: 2rem;
     height: 2rem;
 }
-.header__bottom{
+
+.header__bottom {
     width: 100%;
     background-color: var(--color-white);
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 12rem);
     align-items: center;
 }
-.header__bottom .logo{
+
+.header__bottom .logo {
     width: 20rem;
     height: 3.5rem;
     /*background-image: url(../img/logoSMS.png);
@@ -47,48 +52,56 @@ header{
     background-position: center;
     background-size: contain;*/
 }
-.header__bottom .logo img{
+
+.header__bottom .logo img {
 
     height: 100%;
 }
-.header__bottom .key{
+
+.header__bottom .key {
     color: var(--color-font-gray);
     font-size: .9rem;
 }
-.header__bottom .container div{
+
+.header__bottom .container div {
     height: 1.2rem;
     padding: 0 1rem;
 }
-.header__menu{
+
+.header__menu {
     cursor: pointer;
 }
+
 /*side bar*/
-.sideBar{
+.sideBar {
     position: fixed;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	display: flex;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
     justify-content: end;
-	--opacity: 0;
-	--pointer: none;
-	opacity: var(--opacity);
-	pointer-events: var(--pointer);
+    --opacity: 0;
+    --pointer: none;
+    opacity: var(--opacity);
+    pointer-events: var(--pointer);
 
 }
-.sideBar__container{
-	height: calc(100vh - 4rem);
+
+.sideBar__container {
+    height: calc(100vh - 4rem);
     width: 12rem;
     background-color: var(--color-background-head);
 }
-.sidebar__header{
+
+.sidebar__header {
     height: 3rem;
     width: 100%;
     display: flex;
     justify-content: end;
     align-items: center;
 }
+
 .sidebar__header img {
     padding: 0;
     width: 1.5rem;
@@ -96,28 +109,33 @@ header{
     margin-right: 1rem;
     cursor: pointer;
 }
-.modal__show{
-	--opacity: 1;
-	--pointer: unset;
+
+.modal__show {
+    --opacity: 1;
+    --pointer: unset;
 }
-.nav__list{
-	height: 100%;
-	display: grid;
-	grid-auto-rows: max-content;
+
+.nav__list {
+    height: 100%;
+    display: grid;
+    grid-auto-rows: max-content;
 }
-.nav__link{
-	color: var(--color-white);
-	text-decoration: none;
-	padding: 1rem;
-	height: 100%;
-	display: flex;
-	align-items: center;
+
+.nav__link {
+    color: var(--color-white);
+    text-decoration: none;
+    padding: 1rem;
+    height: 100%;
+    display: flex;
+    align-items: center;
 }
-.nav__link:hover{
-	background-color: var(--color-transparent-grey);
+
+.nav__link:hover {
+    background-color: var(--color-transparent-grey);
 }
+
 /*footer*/
-footer{
+footer {
     width: 100%;
     background-color: var(--color-white);
     display: grid;
@@ -125,15 +143,18 @@ footer{
     align-items: center;
     padding: 0 1rem;
 }
-footer img{
+
+footer img {
     width: 2.5rem;
     height: 2.5rem;
 }
-footer div{
+
+footer div {
     height: 100%;
     padding: .5rem 0;
 }
-footer button{
+
+footer button {
     height: 100%;
     width: 10rem;
     background-color: var(--color-background-submit);
@@ -144,12 +165,24 @@ footer button{
     font-weight: bold;
     cursor: pointer;
 }
-footer button.active{
+
+footer button.active {
     background-color: var(--color-background-submit-hover);
 }
-footer button:hover{
+
+footer button:hover {
     background-color: var(--color-background-submit-hover);
 }
+
 footer .logout {
     cursor: pointer;
+}
+
+@media (max-width:800px) {
+    body {
+        min-height: 200vh;
+        display: grid;
+        grid-template-rows: 6.5rem 1fr 4rem;
+        overflow: auto;
+    }
 }
