--- a/view/moduleOne.html
+++ b/view/moduleOne.html
@@ -128,9 +128,9 @@
                 </div>
                 <div>
                     <h1>Modo</h1>
-                    <div><span id="onButtomOPE" class="button__on">M</span></div>
-                    <div><span id="offButtomOPE" class="button__off">A</span></div>
-                    <div><span id="ledOPE" class="indicadores__led"></span></div>
+                    <div><span id="onButtomModo" class="button__on">M</span></div>
+                    <div><span id="offButtomModo" class="button__off">A</span></div>
+                    <div><span id="ledModo" class="indicadores__led"></span></div>
                 </div>
                 <div>
                     <h1>Operacion automatica</h1>
@@ -152,13 +152,12 @@
                 </div>
                 <div>
                     <h1>Valvula manual</h1>
-                    <div><span id="onButtomBomba2" class="button__on">ON</span></div>
-                    <div><span id="offButtomBomba2" class="button__off">OFF</span></div>
-                    <div><span id="ledBomba2" class="indicadores__led"></span></div>
+                    <div><span id="onButtomValvula" class="button__on">ON</span></div>
+                    <div><span id="offButtomValvula" class="button__off">OFF</span></div>
+                    <div><span id="ledValvula" class="indicadores__led"></span></div>
                 </div>
             </div>
-        </div>
-        
+        </div>   
     </main>
     <footer>
     </footer>
