--- a/view/moduleOne.html
+++ b/view/moduleOne.html
@@ -48,11 +48,11 @@
                     </div>
                     <div>
                         <h2>Bomba 1</h2>
-                        <h2>--:--:--</h2>
+                        <h2 id="timeBomba1">--:--:--</h2>
                     </div>
                     <div>
                         <h2>Bomba 2</h2>
-                        <h2>--:--:--</h2>
+                        <h2 id="timeBomba2">--:--:--</h2>
                     </div>
                 </div>
             </div>
